# bazel-pybind11

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: amd64_docker.yml  amd64_docker_bazel.yml  amd64_docker_cmake.yml  amd64_linux.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml
bar/: BUILD.bazel
bar/include/bar/: Bar.hpp
bar/python/: BUILD.bazel  bar.cpp  bar_test.py
bar/src/: Bar.cpp
bar/tests/: bar_test.cpp
bazel/: Makefile  README.md
bazel/docker/almalinux/: Dockerfile
bazel/docker/alpine/: Dockerfile
bazel/docker/archlinux/: Dockerfile
bazel/docker/centos/: Dockerfile
bazel/docker/debian/: Dockerfile
bazel/docker/fedora/: Dockerfile
bazel/docker/opensuse/: Dockerfile
bazel/docker/rockylinux/: Dockerfile
bazel/docker/ubuntu/: Dockerfile
bazel/docker/workspace/: Dockerfile
bp11/foo/: BUILD.bazel  CMakeLists.txt  foo.cc  foo.cpp  foo.h  foo.hpp  foo_test.cc  foo_test.cpp
bp11/foo/python/: BUILD.bazel  CMakeLists.txt  foo.cc  foo.cpp  foo_test.py
ci/: Makefile  README.md
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot
cmake/: BazelPybind11Config.cmake.in  Makefile  README.md  check_deps.cmake  cpp.cmake  deps.cmake  python.cmake  system_deps.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/centos/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/manylinux/: Dockerfile  build-manylinux.sh
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
cmake/docs/: deps.dot
cmake/samples/: sample.py
foo/: BUILD.bazel  CMakeLists.txt  foo_test.cpp
foo/python/: BUILD.bazel  CMakeLists.txt  foo.cpp  foo_test.py  myfoo.cpp
foo/tests/: foo_test.cpp
foobar/: BUILD.bazel
foobar/python/: BUILD.bazel  foobar.cpp  foobar_test.py
foobar/tests/: foobar_test.cpp
native_lib/: BUILD.bazel  foo.cpp
native_lib/python/: BUILD.bazel  CMakeLists.txt  foo_test.py  myfoo.cpp
patches/: 0001-patch-1.patch  0002-patch-2.patch  0003-patch-3.patch  BUILD.bazel  pybind11_bazel.patch
plop/python/: BUILD.bazel  mylib.py  plop_test.py
pure/: BUILD.bazel  mylib_test.py
pure_lib/: mylib.py  mylib_test.py
python/: __init__.py.in  setup.py.in
tools/: Makefile  build-manylinux.sh  build-musllinux.sh
tools/amd64/: manylinux.Dockerfile  musllinux.Dockerfile
tools/arm64/: manylinux.Dockerfile  musllinux.Dockerfile
