module(
    name = "mizux_bp11",
    version = "head",
)

# Only direct dependencies need to be listed below.
# Please keep the versions in sync with the versions in the WORKSPACE file.
# see https://registry.bazel.build/
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

#### DEV ONLY DEPENDENCIES BELOW HERE ####
bazel_dep(name = "googletest", version = "1.17.0")

SUPPORTED_PYTHON_VERSIONS = [
    "3.12",
    "3.11",
    "3.10",
    "3.9",
]

DEFAULT_PYTHON = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

[
    python.toolchain(
        ignore_root_user_error = True,  # needed for CI
        is_default = version == DEFAULT_PYTHON,
        python_version = version,
    )
    for version in SUPPORTED_PYTHON_VERSIONS
]

use_repo(python, python = "python_versions")
