load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "bar",
  srcs = ["src/Bar.cpp"],
  hdrs = ["include/bar/Bar.hpp"],
  strip_include_prefix = "include",
  visibility = ["//visibility:public"],
)

cc_test(
  name = "bar-test",
  srcs = ["tests/bar_test.cpp"],
  #copts = ["-Iexternal/gtest/include"],
  deps = [
    "@com_google_googletest//:gtest_main",
    ":bar",
  ],
)
