# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test", "py_library")

py_library(
  name = "mylib",
  srcs = ["mylib.py"],
  deps = [],
)

py_test(
  name = "mylib_test",
  size = "small",
  srcs = ["mylib_test.py"],
  python_version = "PY3",
  deps = [
    ":mylib",
  ],
  tags = ["unit"],
)
