# Python wrapper for bar library.
load("//third_party/bazel_rules/rules_python/python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "bar",
    srcs = ["bar.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//bar",
    ],
)

py_test(
    name = "bar_test",
    size = "small",
    srcs = ["bar_test.py"],
    data = [
        ":bar.so",
    ],
    tags = ["unit"],
)
