load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "foo",
    srcs = ["foo.cpp"],
    hdrs = ["foo.hpp"],
    #strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "foo_test",
    srcs = ["foo_test.cpp"],
    #copts = ["-Iexternal/gtest/include"],
    deps = [
        ":foo",
        "@com_google_googletest//:gtest_main",
    ],
)
