# Python wrapper for graph libraries.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "foo",
    srcs = ["foo.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//foo",
    ],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    tags = ["unit"],
    data = [
        ":foo.so",
    ],
)
