# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "foo",
    srcs = ["foo.cpp"],
    #visibility = ["//visibility:public"],
    deps = [
        "//foo",
    ],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    data = [
        ":foo.so",
    ],
    tags = ["unit"],
)
