# Python wrapper for foobar library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "foobar",
    srcs = ["foobar.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//foobar",
    ],
)

py_test(
    name = "foobar_test",
    size = "small",
    srcs = ["foobar_test.py"],
    data = [
        ":foobar.so",
    ],
    tags = ["unit"],
)
