# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cc"],
    deps = ["//bp11/foo:foo"],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    python_version = "PY3",
    deps = [":pyfoo"],
    tags = ["unit"],
)
