# Python wrapper for foo library.
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cc"],
    deps = ["//bp11/foo:foo"],
)

py_library(
    name = "pyfoo_lib",
    data = [":pyfoo"],
    imports = ["."],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    python_version = "PY3",
    deps = [":pyfoo_lib"],
    tags = ["unit"],
)
